badge no longer causes vertical scrollbar

--- a/css/github-badge.css
+++ b/css/github-badge.css
@@ -1,3 +1,7 @@
+body{
+    overflow: hidden;
+
+}
 #github {
     -moz-transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
